# didhub

./: .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  build.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/didhub-auth/: Cargo.toml
backend/didhub-auth/src/: lib.rs
backend/didhub-auth/tests/: auth_tests.rs
backend/didhub-backend/: Cargo.toml
backend/didhub-backend/src/: app.rs  auth_builder.rs  bootstrap.rs  cli.rs  config_helpers.rs  config_reloader.rs  csrf.rs  embedded_assets.rs  error.rs  lib.rs  main.rs  rate_limiter.rs  state.rs  tracing_setup.rs  validation.rs
backend/didhub-backend/tests/: auth_integration.rs  dto_handler_tests.rs  dto_tests.rs  dto_validation_tests.rs  integration_affiliations.rs  integration_alters.rs  integration_alters_rbac.rs  integration_alters_rbac_positive.rs  integration_audit_logs.rs  integration_config_startup.rs  integration_files_batch.rs  integration_files_content.rs  integration_hot_swap.rs  integration_instance_settings.rs  integration_relationships.rs  integration_relationships_rbac.rs  integration_relationships_rbac_positive.rs  integration_subsystems.rs  integration_system_rbac.rs  integration_uploads.rs  integration_users.rs  password_hash_tests.rs  rate_limiter_tests.rs
backend/didhub-config/: Cargo.toml  README.md
backend/didhub-config/src/: lib.rs
backend/didhub-db/: Cargo.toml
backend/didhub-db-connection/: Cargo.toml
backend/didhub-db-connection/src/: config.rs  error.rs  lib.rs  logger.rs  pool.rs  test.rs  utils.rs
backend/didhub-db/src/: custom.rs  lib.rs
backend/didhub-job-queue/: Cargo.toml
backend/didhub-job-queue/src/: client.rs  error.rs  executor.rs  lib.rs  types.rs
backend/didhub-jobs/: Cargo.toml
backend/didhub-jobs/src/: backup.rs  config.rs  error.rs  lib.rs  update.rs
backend/didhub-log-client/: Cargo.toml
backend/didhub-log-client/src/: lib.rs
backend/didhub-updates/: Cargo.toml
backend/didhub-updates/src/: lib.rs
runtime_tools/setup_helper/: Cargo.toml  README.md
runtime_tools/setup_helper/src/: cli.rs  db.rs  firewall.rs  install.rs  main.rs  service.rs  util.rs  wizard.rs
server-rs/: Cargo.toml  Dockerfile.rust  README-CSRF.md  README.e2e.md  README.md  config.e2e.json  config.example.json
server-rs/.cargo/: config.toml
server-rs/didhub-auth/: Cargo.toml
server-rs/didhub-auth/src/: handlers.rs  lib.rs  middleware.rs  utils.rs
server-rs/didhub-auth/tests/: tests.rs
server-rs/didhub-cache/: Cargo.toml
server-rs/didhub-cache/src/: cache.rs  interface.rs  lib.rs  memory.rs  redis.rs
server-rs/didhub-cache/tests/: cache_new_tests.rs  cache_tests.rs
server-rs/didhub-config/: Cargo.toml
server-rs/didhub-config/src/: app_config.rs  config.rs  lib.rs  structs.rs  utils.rs
server-rs/didhub-config/tests/: basic_config_tests.rs  config_file_tests.rs  config_tests.rs  origin_parsing_tests.rs  test_utils.rs  utility_tests.rs  validation_tests.rs
server-rs/didhub-db/: Cargo.toml
server-rs/didhub-db/src/: alters.rs  audit.rs  common.rs  connection.rs  entity_ops.rs  groups.rs  housekeeping.rs  lib.rs  models.rs  posts.rs  relationships.rs  settings.rs  shortlinks.rs  subsystems.rs  system_requests.rs  systems.rs  types.rs  uploads.rs  user_alter_relationships.rs  users.rs
server-rs/didhub-db/tests/: audit_tests.rs  relationships.rs  relationships_mixed.rs  user_profile_tests.rs
server-rs/didhub-error/: Cargo.toml
server-rs/didhub-error/src/: error.rs  lib.rs
server-rs/didhub-error/tests/: error_tests.rs
server-rs/didhub-housekeeping/: Cargo.toml
server-rs/didhub-housekeeping/src/: lib.rs
server-rs/didhub-image/: Cargo.toml  README.md
server-rs/didhub-image/src/: lib.rs
server-rs/didhub-image/tests/: integration_tests.rs
server-rs/didhub-jobs/: Cargo.toml
server-rs/didhub-jobs/src/: database.rs  lib.rs  maintenance.rs  uploads.rs
server-rs/didhub-jobs/tests/: integration_tests.rs
server-rs/didhub-metrics/: Cargo.toml
server-rs/didhub-metrics/src/: lib.rs
server-rs/didhub-metrics/tests/: tests.rs
server-rs/didhub-middleware/: Cargo.toml  README.md
server-rs/didhub-middleware/src/: client_ip.rs  csrf.rs  lib.rs  middleware_ext.rs  request_logger.rs  types.rs  utils.rs  validation.rs
server-rs/didhub-middleware/tests/: tests.rs
server-rs/didhub-migrations/src/: lib.rs
server-rs/didhub-oidc/: Cargo.toml
server-rs/didhub-oidc/src/: lib.rs
server-rs/didhub-oidc/tests/: tests.rs
server-rs/didhub-pdf/: Cargo.toml
server-rs/didhub-pdf/src/: lib.rs
server-rs/didhub-scheduler/: Cargo.toml
server-rs/didhub-scheduler/src/: lib.rs
server-rs/didhub-scheduler/tests/: integration_tests.rs
server-rs/didhub-server/: Cargo.toml  build.rs
server-rs/didhub-server/src/: lib.rs  logging.rs  main.rs  rate_limit_governor.rs  routes.rs  routes_admin_misc.rs  routes_alters.rs  routes_audit.rs  routes_avatar.rs  routes_common.rs  routes_debug.rs  routes_groups.rs  routes_housekeeping.rs  routes_oidc.rs  routes_password_reset.rs  routes_pdf.rs  routes_posts.rs  routes_settings.rs  routes_shortlinks.rs  routes_static.rs  routes_subsystems.rs  routes_upload.rs  (+9 more)
server-rs/didhub-updater/: Cargo.toml  build.rs
server-rs/tests/: alters_more_coverage.rs  alters_permissions.rs  audit_insert.rs  audit_tests.rs  auth_and_users.rs  auth_negative.rs  avatar_tests.rs  backup_restore_roundtrip.rs  birthdays_digest_tests.rs  change_password_tests.rs  csrf_rotation_test.rs  csrf_tests.rs  db_edge_cases.rs  db_edge_cases_more.rs  groups_owner_tests.rs  groups_tests.rs  housekeeping_tests.rs  integration_mysql.rs  integration_postgres.rs  misc_routes.rs  must_change_and_vacuum_tests.rs  oidc_flow_placeholder.rs  oidc_integration.rs  oidc_secret.rs  oidc_secret_integration.rs  oidc_secret_unit_tests.rs  oidc_tests.rs  password_reset_tests.rs  pdf_tests.rs  posts_tests.rs  prune_jobs_tests.rs  purge_audit_unit.rs  rate_limit_tests.rs  security_headers_tests.rs  settings_tests.rs  shortlinks_tests.rs  subsystems_tests.rs  system_requests_tests.rs  systems_tests.rs  upload_dir_migration_names.rs  (+1 more)
(+498 files in other folders)
