[package]
name = "didhub-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "chrono"] }
once_cell = "1"
didhub-db = { path = "../didhub-db" }
didhub-db-connection = { path = "../didhub-db-connection" }
didhub-log-client = { path = "../didhub-log-client" }
didhub-auth = { path = "../didhub-auth" }
didhub-job-queue = { path = "../didhub-job-queue" }
didhub-updates = { path = "../didhub-updates" }
didhub-config = { path = "../didhub-config" }
didhub-migrations = { path = "../didhub-migrations" }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "uuid"] }
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tower-http = { version = "0.6", features = ["fs"] }
hex = "0.4"
pem = "3"
simple_asn1 = "0.6"
cookie = "0.18"
dashmap = "6"
base64 = "0.22"
mime_guess = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rust-embed = { version = "8", features = ["compression", "include-exclude"] }

[dev-dependencies]
hyper = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.5"
