[package]
name = "didhub-config"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.9", optional = true }
thiserror = "2"
once_cell = "1"
regex = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
