[package]
name = "didhub-db-connection"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio"] }
thiserror = "2"
didhub-log-client = { path = "../didhub-log-client" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
