[package]
name = "didhub-db"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite", "uuid-native"]
uuid-native = ["dep:uuid"]
postgres = ["didhub-db-connection/postgres", "sqlx/postgres"]
mysql = ["didhub-db-connection/mysql", "sqlx/mysql"]
sqlite = ["didhub-db-connection/sqlite", "sqlx/sqlite"]

[dependencies]
didhub-db-connection = { path = "../didhub-db-connection" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"], optional = true }
