[package]
name = "didhub-job-queue"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight job queue abstraction for the DIDHub backend"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
