[package]
name = "didhub-jobs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Concrete job implementations for the DIDHub backend"

[dependencies]
didhub-job-queue = { path = "../didhub-job-queue" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
