[package]
name = "didhub-updates"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
