[package]
name = "didhub-setup-helper"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "didhub-setup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
didhub-config = { path = "../../backend/didhub-config" }
didhub-migrations = { path = "../../backend/didhub-migrations" }
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
