[package]
name = "didhub-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
tracing = "0.1"
didhub-db = { path = "../didhub-db" }
didhub-error = { path = "../didhub-error" }
didhub-middleware = { path = "../didhub-middleware" }
didhub-config = { path = "../didhub-config" }
didhub-cache = { path = "../didhub-cache" }
didhub-metrics = { path = "../didhub-metrics" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"