[package]
name = "didhub-cache"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
dashmap = "6"
redis = { version = "0.32", features = ["tokio-comp"] }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"