[package]
name = "didhub-db"
version = "0.1.3"
edition = "2021"
license = "MIT"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql", "migrate", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
uuid = { version = "1", features = ["serde", "v4"] }
didhub-cache = { path = "../didhub-cache" }
didhub-migrations = { path = "../didhub-migrations" }
didhub-config = { path = "../didhub-config" }
didhub-metrics = { path = "../didhub-metrics" }
tracing = "0.1"

[features]
types = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }