[package]
name = "didhub-housekeeping"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
didhub-db = { path = "../didhub-db" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"
async-trait = "0.1"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"