[package]
name = "didhub-image"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }