[package]
name = "didhub-jobs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
didhub-db = { path = "../didhub-db" }
didhub-metrics = { path = "../didhub-metrics" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
async-trait = "0.1"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
