[package]
name = "didhub-middleware"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
base64 = "0.22"
rand = "0.9"
tracing = "0.1"
bcrypt = "0.17"
serde = { version = "1", features = ["derive"] }
didhub-db = { path = "../didhub-db" }
didhub-error = { path = "../didhub-error" }
didhub-config = { path = "../didhub-config" }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }