[package]
name = "didhub-middleware"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
rand = "0.8"
tracing = "0.1"
didhub-db = { path = "../didhub-db" }
didhub-error = { path = "../didhub-error" }
didhub-metrics = { path = "../didhub-metrics" }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }