[package]
name = "didhub-oidc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
openidconnect = { version = "4", default-features = true, features = ["reqwest"] }
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }
rsa = "0.9"
pkcs8 = "0.10"

[features]
types = []