[package]
name = "didhub-server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
config = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql", "migrate", "chrono", "uuid"] }
didhub-migrations = { path = "../didhub-migrations" }
didhub-middleware = { path = "../didhub-middleware" }
didhub-db = { path = "../didhub-db" }
didhub-cache = { path = "../didhub-cache" }
didhub-error = { path = "../didhub-error" }
didhub-config = { path = "../didhub-config" }
didhub-auth = { path = "../didhub-auth" }
didhub-oidc = { path = "../didhub-oidc" }
didhub-metrics = { path = "../didhub-metrics" }
didhub-scheduler = { path = "../didhub-scheduler" }
didhub-updater = { path = "../didhub-updater" }
didhub-image = { path = "../didhub-image" }
didhub-pdf = { path = "../didhub-pdf" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sanitize-filename = "0.6"
bytes = "1"
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "compression-gzip", "limit", "timeout", "request-id"] }
ulid = "1"
prometheus = "0.14"
url = "2"
rand = "0.9"
html-escape = "0.2"
base64 = "0.22"
hex = "0.4"
futures = "0.3"
getrandom = "0.3"
hyper = { version = "1", features=["full"] }
http-body-util = "0.1"
redis = { version = "0.32", features = ["tokio-comp"] }
dashmap = "6"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
openidconnect = { version = "4", default-features = true, features = ["reqwest"] }
self_update = { version = "0.42", optional = true }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
blake3 = "1"
once_cell = "1"
include_dir = "0.7"
inquire = "0.9"
zip = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
pem = "3"
rsa = "0.9"
pkcs8 = "0.10"
tempfile = "3"

[features]
# Enable this to compile in self-update logic
updater = ["didhub-updater/updater"]
# Embed frontend static assets into the binary when enabled.
# Disable this feature during local dev to serve assets from disk.
embed_static = []
oidc_integration_tests = []
e2e-tests = []

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
opt-level = 3

[package.metadata]
description = "Rust port of DIDHub server"